# cooleffnet

./: .gitignore  Figure.py  LICENSE  MANIFEST.in  README.MD  README.md  bayesian_ensemble_network.py  correlation_networks.py  correlations.py  double.py  fcdb.py  gpflow-multi-gpr.py  gpflow-multi-svgp.py  gpflow-single.py  info.py  main.py  predictor.py  pyproject.toml  pytorch-nn-test.py  pytorch_nn_test.py  scikit-multi.py  scikit-nn-test.py  scikit-single.py  util.py
baddata/: McNamara2021_Fig15.json
cooleffnet/: bayesian_ensemble_network.py  cooleffnet_pred.py  cooleffnet_train.py  correlations.py  fcdb.py  info.py  predictor.py
cooleffnet/models/: general.pth  specific.pth
data/: Anderson2015_Fig12a.json  Anderson2015_Fig12b.json  Anderson2015_Fig12c.json  Anderson2015_Fig5a.json  Anderson2015_Fig5b.json  Anderson2015_Fig5c.json  Anderson2016_Fig10a.json  Anderson2016_Fig10b.json  Anderson2016_Fig10c.json  Anderson2016_Fig12a.json  Anderson2016_Fig12b.json  Anderson2016_Fig12c.json  Anderson2016_Fig7a.json  Anderson2016_Fig7b.json  Anderson2016_Fig7c.json  Anderson2016_Fig9a.json  Anderson2016_Fig9b.json  Anderson2016_Fig9c.json  Baldauf2002_Fig2a.json  Baldauf2002_Fig2b.json  Baldauf2002_Fig4a.json  Baldauf2002_Fig4b.json  Baldauf2002_Fig5a.json  Baldauf2002_Fig5b.json  Baldauf2002_Fig6a.json  Baldauf2002_Fig6b.json  Baldauf2002_Fig6c.json  Baldauf2002_Fig6d.json  Bell2000_Fig3a.json  Bell2000_Fig3b.json  Bell2000_Fig3c.json  Bell2000_Fig3d.json  Bell2000_Fig3e.json  Bell2000_Fig5a.json  Bell2000_Fig5b.json  Bell2000_Fig5c.json  Bell2000_Fig5d.json  Bell2000_Fig5e.json  Bonanni2010_Fig11a.json  Bonanni2010_Fig7a.json  (+67 more)
