[tool.poetry]
name = "cooleffnet"
version = "0.1.0"
description = "CoolEffNet - Predicting Film Cooling Effectiveness with Neural Networks"
authors = [
    "András Ottó Földes <aof26@cam.ac.uk>",
    "Dr James Brind <jb753@eng.cam.ac.uk>",
]
license = "LICENCE"
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

repository = "https://github.com/jb753/fcdb"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "~1.23.1"
CoolProp = "~6.4.1"
torch = "~1.12.0"
matplotlib = "~3.5.2"
captum = "~0.5.0"
prettytable = "~3.3.0"

[tool.poetry.scripts]
cooleffnet = "cooleffnet.cooleffnet_pred:main"
cooleffnet-train = "cooleffnet.cooleffnet_train:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
